Fixed extra spacing appearing in authot

--- a/aemdesign-aem-common/src/main/content/jcr_root/apps/aemdesign/clientlibs/hooks/component-label/css/component-label.css
+++ b/aemdesign-aem-common/src/main/content/jcr_root/apps/aemdesign/clientlibs/hooks/component-label/css/component-label.css
@@ -12,10 +12,6 @@
   display: block;
 }
 
-.cq-Overlay--component.cq-Overlay--placeholder {
-  margin-top: 30px;
-}
-
 /**
  * Poor man's fix to ensure 'Container' elements don't appear when we don't want them to.
  */
